name:                HiggsDitau
version:             0.0.0.0
synopsis:            Testing kinematic variables for the Higgs-ditau channel
description:         Testing kinematic variables for the Higgs-ditau channel
homepage:            https://github.com/cbpark/HiggsDitau
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          Chan Beom Park <cbpark@gmail.com>
copyright:           (c) 2015 Chan Beom Park
category:            Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/HiggsDitau.git

executable higgs_ditau_parton
  main-is:             higgs_ditau_parton.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8
                     , pipes
                     , pipes-bytestring
                     , lhef-tools
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -threaded