name:                HiggsDitau
version:             0.0.0.0
synopsis:            Testing kinematic variables for the Higgs-ditau channel
description:         Testing kinematic variables for the Higgs-ditau channel
homepage:            https://github.com/cbpark/HiggsDitau
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          Chan Beom Park <cbpark@gmail.com>
copyright:           (c) 2015 Chan Beom Park
category:            Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/HiggsDitau.git

executable higgs_ditau_parton
  main-is:             higgs_ditau_parton.hs
  build-depends:       base >=4.8
                     , bytestring
                     , pipes
                     , zlib
                     , hep-utilities
                     , lhef-tools
  extra-libraries:     MT2Calculator
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields

executable higgs_ditau_check_parton
  main-is:             higgs_ditau_check_parton.hs
  build-depends:       base >=4.8
                     , bytestring
                     , pipes
                     , zlib
                     , hep-utilities
                     , lhef-tools
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields

executable higgs_ditau_hist_parton
  main-is:             higgs_ditau_hist_parton.hs
  other-modules:       Analysis.Parton
  build-depends:       base >=4.8
                     , attoparsec
                     , bytestring
                     , optparse-applicative
                     , pipes
                     , pipes-attoparsec
                     , pipes-bytestring
                     , transformers
                     , hep-utilities
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields

executable higgs_ditau_jet
  main-is:             higgs_ditau_jet.hs
  -- other-modules:
  build-depends:       base >=4.8
                     , bytestring
                     , pipes
                     , transformers
                     , zlib
                     , hep-utilities
                     , lhco-tools
  extra-libraries:     MT2Calculator
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields